2010-03-08  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Added stanza to service_start() to create
	  /var/run/munge dir if needed.  Fixes bug on Debian/Ubuntu when RAMRUN
	  is enabled.

2010-03-02  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_select_auth_method.m4: Tweaked whitespace.

	* : Changed license from GPLv2+ to GPLv3+/LGPLv3+.

2010-02-11  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_debug.m4: Tweaked AC_MSG_RESULT text on failure.

	* config/x_ac_select_crypto_lib.m4:
	  Tweaked AC_MSG_RESULT text on failure.

	* : Moved the compile-time checks for determining the client
	  authentication method into the configure script.
	* configure.ac, config/x_ac_select_auth_method.m4:
	  Added X_AC_SELECT_AUTH_METHOD.
	* config/x_ac_check_fifo_recvfd.m4: Moved check for struct strrecvfd
	  into config/x_ac_select_auth_method.m4 since it is required for both
	  AUTH_METHOD_RECVFD_MKFIFO & AUTH_METHOD_RECVFD_MKNOD.
	* src/libcommon/auth_policy.h, src/libcommon/common.h,
	  src/libcommon/Makefile.am: Removed "auth_policy.h".
	* src/libmunge/auth_send.c, src/munged/auth_recv.c, src/munged/conf.c:
	  Replaced MUNGE_AUTH_* defs with corresponding AUTH_METHOD_* defs.

	* src/libmunge/auth_send.h: Changed #ifdef guard to MUNGE_AUTH_SEND_H.
	* src/munged/auth_recv.h: Changed #ifdef guard to MUNGE_AUTH_RECV_H.

	* configure.ac, config/x_ac_gpl_licensed.m4: Removed X_AC_GPL_LICENSED.
	* src/libmunge/munge.h: Removed #error if !GPL_LICENSED.
	* src/libmunge/munge.3.in, src/libmunge/munge_ctx.3.in,
	  src/libmunge/munge_enum.3.in: Removed references to GPL_LICENSED.

	* configure.ac: Added check for struct ucred in <sys/socket.h>.
	* src/libcommon/auth_policy.h: Added test for HAVE_STRUCT_UCRED to
	  MUNGE_AUTH_SO_PEERCRED client authentication check.

	* configure.ac, config/x_ac_check_so_peercred.m4:
	  Renamed from config/x_ac_check_peercred.m4.
	* src/libcommon/auth_policy.h, src/munged/auth_recv.c: