@@ -1,3 +1,10 @@
+2010-03-09  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/munged/munged.c, src/munged/job.c: Changed type of global "done"
+	  signal handler flag to volatile sig_atomic_t.  Moved exit_handler()'s
+	  log_msg() call outside of signal handler to instead follow
+	  job_accept()'s while-loop.
+
 2010-03-08  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/etc/munge.init.in: Added stanza to service_start() to create
